{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 5,
  "lineage": "72adf7d9-f7bb-666d-38e0-9aed671d00c1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019394553470:security-group/sg-0b17ec4a0cfb1622d",
            "description": "Allow public traffic",
            "egress": [],
            "id": "sg-0b17ec4a0cfb1622d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow incoming 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow incoming 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-ingress",
            "name_prefix": "",
            "owner_id": "019394553470",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "alb-ingress-sd5046-aws-infrastructure-network-dev",
              "Owner": "trangpham",
              "Project": "sd5046-aws-infrastructure"
            },
            "tags_all": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "alb-ingress-sd5046-aws-infrastructure-network-dev",
              "Owner": "trangpham",
              "Project": "sd5046-aws-infrastructure"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a35cf5ad6f49901"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_dev",
      "mode": "managed",
      "type": "aws_eip",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-054d8169146121ba5",
            "association_id": "eipassoc-0bdb90d2174ff65d7",
            "domain": "vpc",
            "id": "eipalloc-054d8169146121ba5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b72c6fd3a7cc562b",
            "private_dns": "ip-10-0-2-151.ec2.internal",
            "private_ip": "10.0.2.151",
            "public_dns": "ec2-100-48-231-25.compute-1.amazonaws.com",
            "public_ip": "100.48.231.25",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network_dev",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019394553470:internet-gateway/igw-04cfcad5a58431609",
            "id": "igw-04cfcad5a58431609",
            "owner_id": "019394553470",
            "tags": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "sd5046-aws-infrastructure-dev-network",
              "Owner": "trangpham",
              "Project": "sd5046-aws-infrastructure"
            },
            "tags_all": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "sd5046-aws-infrastructure-dev-network",
              "Owner": "trangpham",
              "Project": "sd5046-aws-infrastructure"
            },
            "vpc_id": "vpc-07a35cf5ad6f49901"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_dev",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "private-natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-054d8169146121ba5",
            "association_id": "eipassoc-0bdb90d2174ff65d7",
            "connectivity_type": "public",
            "id": "nat-04fc172c4c7afc52e",
            "network_interface_id": "eni-0b72c6fd3a7cc562b",
            "private_ip": "10.0.2.151",
            "public_ip": "100.48.231.25",
            "subnet_id": "subnet-00fad439ca24302be"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_dev.aws_eip.default",
            "module.network_dev.aws_subnet.public",
            "module.network_dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_dev",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019394553470:route-table/rtb-0391dd526e62776b8",
            "id": "rtb-0391dd526e62776b8",
            "owner_id": "019394553470",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04fc172c4c7afc52e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "sd5046-aws-infrastructure-network-dev-private",
              "Owner": "trangpham",
              "Project": "sd5046-aws-infrastructure"
            },
            "tags_all": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "sd5046-aws-infrastructure-network-dev-private",
              "Owner": "trangpham",
              "Project": "sd5046-aws-infrastructure"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a35cf5ad6f49901"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_dev.aws_eip.default",
            "module.network_dev.aws_nat_gateway.private-natgw",
            "module.network_dev.aws_subnet.public",
            "module.network_dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_dev",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019394553470:route-table/rtb-0a2e4e49bf3caa002",
            "id": "rtb-0a2e4e49bf3caa002",
            "owner_id": "019394553470",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04cfcad5a58431609",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "sd5046-aws-infrastructure-network-dev-public",
              "Owner": "trangpham",
              "Project": "sd5046-aws-infrastructure"
            },
            "tags_all": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "sd5046-aws-infrastructure-network-dev-public",
              "Owner": "trangpham",
              "Project": "sd5046-aws-infrastructure"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a35cf5ad6f49901"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_dev.aws_internet_gateway.igw",
            "module.network_dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crta-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b8d293b8d53075c",
            "route_table_id": "rtb-0391dd526e62776b8",
            "subnet_id": "subnet-07b99aa968d652b06"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_dev.aws_eip.default",
            "module.network_dev.aws_nat_gateway.private-natgw",
            "module.network_dev.aws_route_table.private-crt",
            "module.network_dev.aws_subnet.private",
            "module.network_dev.aws_subnet.public",
            "module.network_dev.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03cd00ad0b02c2eb5",
            "route_table_id": "rtb-0391dd526e62776b8",
            "subnet_id": "subnet-0db3422bca387dfab"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_dev.aws_eip.default",
            "module.network_dev.aws_nat_gateway.private-natgw",
            "module.network_dev.aws_route_table.private-crt",
            "module.network_dev.aws_subnet.private",
            "module.network_dev.aws_subnet.public",
            "module.network_dev.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070033bed1be0d099",
            "route_table_id": "rtb-0391dd526e62776b8",
            "subnet_id": "subnet-0bcfd5785a237c07d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_dev.aws_eip.default",
            "module.network_dev.aws_nat_gateway.private-natgw",
            "module.network_dev.aws_route_table.private-crt",
            "module.network_dev.aws_subnet.private",
            "module.network_dev.aws_subnet.public",
            "module.network_dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crta-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a2cca1600a23b75",
            "route_table_id": "rtb-0a2e4e49bf3caa002",
            "subnet_id": "subnet-00fad439ca24302be"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_dev.aws_internet_gateway.igw",
            "module.network_dev.aws_route_table.public-crt",
            "module.network_dev.aws_subnet.public",
            "module.network_dev.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f619c2d4580de4d1",
            "route_table_id": "rtb-0a2e4e49bf3caa002",
            "subnet_id": "subnet-01c480f26646e3f49"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_dev.aws_internet_gateway.igw",
            "module.network_dev.aws_route_table.public-crt",
            "module.network_dev.aws_subnet.public",
            "module.network_dev.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc2392b07729261a",
            "route_table_id": "rtb-0a2e4e49bf3caa002",
            "subnet_id": "subnet-0c2b0af1fba57cc9d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_dev.aws_internet_gateway.igw",
            "module.network_dev.aws_route_table.public-crt",
            "module.network_dev.aws_subnet.public",
            "module.network_dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_dev",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "bastion-host",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019394553470:security-group/sg-0475554ba5bd62b07",
            "description": "Instance default security group",
            "egress": [],
            "id": "sg-0475554ba5bd62b07",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-host",
            "name_prefix": "",
            "owner_id": "019394553470",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "sd5046-aws-infrastructure-dev-network",
              "Owner": "trangpham",
              "Project": "sd5046-aws-infrastructure"
            },
            "tags_all": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "sd5046-aws-infrastructure-dev-network",
              "Owner": "trangpham",
              "Project": "sd5046-aws-infrastructure"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a35cf5ad6f49901"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_dev.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "default-group",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019394553470:security-group/sg-0836fd70f28fa74d6",
            "description": "Instance default security group",
            "egress": [],
            "id": "sg-0836fd70f28fa74d6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/32"
                ],
                "description": "",
                "from_port": 1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1
              }
            ],
            "name": "default-group",
            "name_prefix": "",
            "owner_id": "019394553470",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "sd5046-aws-infrastructure-dev-network",
              "Owner": "trangpham",
              "Project": "sd5046-aws-infrastructure"
            },
            "tags_all": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "sd5046-aws-infrastructure-dev-network",
              "Owner": "trangpham",
              "Project": "sd5046-aws-infrastructure"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a35cf5ad6f49901"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_dev.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "test-host",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019394553470:security-group/sg-09b723b57b6cafe7d",
            "description": "Instance default security group",
            "egress": [],
            "id": "sg-09b723b57b6cafe7d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "test-host",
            "name_prefix": "",
            "owner_id": "019394553470",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "sd5046-aws-infrastructure-dev-network",
              "Owner": "trangpham",
              "Project": "sd5046-aws-infrastructure"
            },
            "tags_all": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "sd5046-aws-infrastructure-dev-network",
              "Owner": "trangpham",
              "Project": "sd5046-aws-infrastructure"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a35cf5ad6f49901"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_dev.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network_dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019394553470:subnet/subnet-07b99aa968d652b06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b99aa968d652b06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "019394553470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "sd5046-aws-infrastructure-dev-private-network-0",
              "Owner": "trangpham",
              "Project": "sd5046-aws-infrastructure"
            },
            "tags_all": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "sd5046-aws-infrastructure-dev-private-network-0",
              "Owner": "trangpham",
              "Project": "sd5046-aws-infrastructure"
            },
            "vpc_id": "vpc-07a35cf5ad6f49901"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_dev.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019394553470:subnet/subnet-0db3422bca387dfab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db3422bca387dfab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "019394553470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "sd5046-aws-infrastructure-dev-private-network-1",
              "Owner": "trangpham",
              "Project": "sd5046-aws-infrastructure"
            },
            "tags_all": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "sd5046-aws-infrastructure-dev-private-network-1",
              "Owner": "trangpham",
              "Project": "sd5046-aws-infrastructure"
            },
            "vpc_id": "vpc-07a35cf5ad6f49901"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_dev.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019394553470:subnet/subnet-0bcfd5785a237c07d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bcfd5785a237c07d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "019394553470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "sd5046-aws-infrastructure-dev-private-network-2",
              "Owner": "trangpham",
              "Project": "sd5046-aws-infrastructure"
            },
            "tags_all": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "sd5046-aws-infrastructure-dev-private-network-2",
              "Owner": "trangpham",
              "Project": "sd5046-aws-infrastructure"
            },
            "vpc_id": "vpc-07a35cf5ad6f49901"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019394553470:subnet/subnet-00fad439ca24302be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00fad439ca24302be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "019394553470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "sd5046-aws-infrastructure-dev-public-network-0",
              "Owner": "trangpham",
              "Project": "sd5046-aws-infrastructure"
            },
            "tags_all": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "sd5046-aws-infrastructure-dev-public-network-0",
              "Owner": "trangpham",
              "Project": "sd5046-aws-infrastructure"
            },
            "vpc_id": "vpc-07a35cf5ad6f49901"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_dev.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019394553470:subnet/subnet-01c480f26646e3f49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c480f26646e3f49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "019394553470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "sd5046-aws-infrastructure-dev-public-network-1",
              "Owner": "trangpham",
              "Project": "sd5046-aws-infrastructure"
            },
            "tags_all": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "sd5046-aws-infrastructure-dev-public-network-1",
              "Owner": "trangpham",
              "Project": "sd5046-aws-infrastructure"
            },
            "vpc_id": "vpc-07a35cf5ad6f49901"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_dev.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019394553470:subnet/subnet-0c2b0af1fba57cc9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2b0af1fba57cc9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "019394553470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "sd5046-aws-infrastructure-dev-public-network-2",
              "Owner": "trangpham",
              "Project": "sd5046-aws-infrastructure"
            },
            "tags_all": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "sd5046-aws-infrastructure-dev-public-network-2",
              "Owner": "trangpham",
              "Project": "sd5046-aws-infrastructure"
            },
            "vpc_id": "vpc-07a35cf5ad6f49901"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_dev",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019394553470:vpc/vpc-07a35cf5ad6f49901",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-096fe628aeede316d",
            "default_route_table_id": "rtb-00ba217c85f91871f",
            "default_security_group_id": "sg-0301196f48c784850",
            "dhcp_options_id": "dopt-0e6f0532a3903895d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07a35cf5ad6f49901",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00ba217c85f91871f",
            "owner_id": "019394553470",
            "tags": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "sd5046-aws-infrastructure-dev-network",
              "Owner": "trangpham",
              "Project": "sd5046-aws-infrastructure"
            },
            "tags_all": {
              "Description": "Managed by Terraform",
              "Environment": "dev",
              "Name": "sd5046-aws-infrastructure-dev-network",
              "Owner": "trangpham",
              "Project": "sd5046-aws-infrastructure"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network_dev",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "bastion-host",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019394553470:security-group-rule/sgr-02e07ae743904276e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-02e07ae743904276e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0475554ba5bd62b07",
            "security_group_rule_id": "sgr-02e07ae743904276e",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_dev.aws_security_group.this",
            "module.network_dev.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "default-group",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019394553470:security-group-rule/sgr-0a5bbb32ec9be672a",
            "cidr_ipv4": "0.0.0.0/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 1,
            "id": "sgr-0a5bbb32ec9be672a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0836fd70f28fa74d6",
            "security_group_rule_id": "sgr-0a5bbb32ec9be672a",
            "tags": null,
            "tags_all": {},
            "to_port": 1
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_dev.aws_security_group.this",
            "module.network_dev.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "test-host",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:019394553470:security-group-rule/sgr-031f630dc9d2e9f3d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-031f630dc9d2e9f3d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-09b723b57b6cafe7d",
            "security_group_rule_id": "sgr-031f630dc9d2e9f3d",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network_dev.aws_security_group.this",
            "module.network_dev.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}